tests/NormalTests/paczka1/fuzzy1/29777468.err
Error in line 5: KTsHhtPcG A74 9-,2
Error in line 2: oWO S712 50,9
Error in line 6: oWO A74 99,7
Error in line 7: KTsHhtPcG A74 393,1
Error in line 12: KTsHhtPcG S712 37,3
Error in line 38: pXKeXT0y1 A344 93,6
